[gd_scene load_steps=33 format=3 uid="uid://b5t7f8r1backb"]

[ext_resource type="Script" uid="uid://qr66qvlcjtk7" path="res://scripts/characters/model.gd" id="1_8ddow"]
[ext_resource type="PackedScene" uid="uid://dkd1jwgp3x0cw" path="res://assets/models/player/player.glb" id="2_1xcp4"]
[ext_resource type="Curve" uid="uid://ct3njrgm7bpap" path="res://assets/animations/anim_crossover_right.tres" id="2_dn0ju"]
[ext_resource type="AnimationNodeBlendSpace2D" uid="uid://d0dpxauu8ifrv" path="res://assets/animations/move_blend_tree.tres" id="3_bnshe"]
[ext_resource type="Script" uid="uid://b0u67k5bc8g6l" path="res://scripts/resources/stroke_animation.gd" id="3_wv0r8"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://bay3hh3awjm8t" path="res://assets/animations/stroke_blend_tree.tres" id="4_1xcp4"]

[sub_resource type="Resource" id="Resource_oci05"]
script = ExtResource("3_wv0r8")
hit_time = 0.63
metadata/_custom_type_script = "uid://b0u67k5bc8g6l"

[sub_resource type="BoxShape3D" id="50"]
size = Vector3(1.14, 2.037, 0.656)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6rst8"]
animation = &"g_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k6wyo"]
advance_mode = 2
advance_condition = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lj1u1"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bnshe"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6rst8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_os7wk"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_os7wk"]
states/g_idle/node = SubResource("AnimationNodeAnimation_6rst8")
states/g_idle/position = Vector2(357, 99)
states/move/node = ExtResource("3_bnshe")
states/move/position = Vector2(512, 86)
states/stroke/node = ExtResource("4_1xcp4")
states/stroke/position = Vector2(655, 92)
transitions = ["g_idle", "move", SubResource("AnimationNodeStateMachineTransition_k6wyo"), "move", "g_idle", SubResource("AnimationNodeStateMachineTransition_lj1u1"), "Start", "g_idle", SubResource("AnimationNodeStateMachineTransition_bnshe"), "move", "stroke", SubResource("AnimationNodeStateMachineTransition_6rst8"), "stroke", "move", SubResource("AnimationNodeStateMachineTransition_os7wk")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8sm40"]
animation = &"g_run_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dbqhb"]
animation = &"g_run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t4p63"]
animation = &"g_run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yvebi"]
animation = &"g_idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mttge"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8sm40")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_dbqhb")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_t4p63")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_yvebi")
blend_point_3/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1e60p"]
animation = &"g_backhand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bnshe"]
animation = &"g_serve"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_6rst8"]
input_0/name = "forehand"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "backhand"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "serve"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wv0r8"]
animation = &"g_forehand_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oci05"]
animation = &"g_forehand"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4mh3o"]
animation = &"g_forehand_up"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_wgdgj"]
blend_point_0/node = SubResource("AnimationNodeAnimation_wv0r8")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_oci05")
blend_point_1/pos = 0.5
blend_point_2/node = SubResource("AnimationNodeAnimation_4mh3o")
blend_point_2/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k6wyo"]
graph_offset = Vector2(-269.5566, -66.76676)
nodes/output/position = Vector2(580, 100)
nodes/forehand/node = SubResource("AnimationNodeBlendSpace1D_wgdgj")
nodes/forehand/position = Vector2(-40, 0)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_1e60p")
"nodes/Animation 2/position" = Vector2(80, 180)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_bnshe")
"nodes/Animation 3/position" = Vector2(120, 380)
nodes/Transition/node = SubResource("AnimationNodeTransition_6rst8")
nodes/Transition/position = Vector2(360, 80)
node_connections = [&"output", 0, &"Transition", &"Transition", 0, &"forehand", &"Transition", 1, &"Animation 2", &"Transition", 2, &"Animation 3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7lfwa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j06ue"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1e60p"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dxleo"]
states/Start/position = Vector2(137, 112)
states/move/node = SubResource("AnimationNodeBlendSpace2D_mttge")
states/move/position = Vector2(400, 109)
states/stroke/node = SubResource("AnimationNodeBlendTree_k6wyo")
states/stroke/position = Vector2(567, 111)
transitions = ["move", "stroke", SubResource("AnimationNodeStateMachineTransition_7lfwa"), "stroke", "move", SubResource("AnimationNodeStateMachineTransition_j06ue"), "Start", "move", SubResource("AnimationNodeStateMachineTransition_1e60p")]
graph_offset = Vector2(43.48047, 56.632813)

[node name="Model" type="Node3D" node_paths=PackedStringArray("animation_tree")]
script = ExtResource("1_8ddow")
_movement_animations = Dictionary[String, Resource]({
"crossover_right": ExtResource("2_dn0ju")
})
_stroke_animations = Dictionary[String, ExtResource("3_wv0r8")]({
"forehand": SubResource("Resource_oci05")
})
animation_tree = NodePath("AnimationTree")

[node name="h" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="player" parent="h" instance=ExtResource("2_1xcp4")]

[node name="GeneralSkeleton" parent="h/player/game-rig" index="0"]
bones/0/position = Vector3(-0.117443636, 1.0846524, 0.09583004)
bones/0/rotation = Quaternion(0.15502375, -0.3536412, -0.069028065, 0.91985905)
bones/1/rotation = Quaternion(1.19209275e-07, 5.6490578e-08, -3.2561204e-08, 1)
bones/2/position = Vector3(-2.3283063e-10, 0.07159884, 0.009978107)
bones/2/rotation = Quaternion(0.056634128, 0.043809656, -0.0036614332, 0.9974266)
bones/3/rotation = Quaternion(0.056634128, 0.13028148, -0.015691048, 0.98973393)
bones/4/rotation = Quaternion(0.056475133, 0.08747224, -0.007221711, 0.99453866)
bones/5/rotation = Quaternion(-0.08451939, -0.13091905, 0.010807352, 0.98772466)
bones/6/rotation = Quaternion(-0.33944064, 0.23476607, 0.07659785, 0.90763307)
bones/9/rotation = Quaternion(0.93197, -0.0623177, 0.24892767, -0.2560928)
bones/14/rotation = Quaternion(0.9319702, 0.0623181, -0.24892756, -0.25609216)
bones/17/rotation = Quaternion(-0.86601466, -9.92061e-07, -5.16872e-07, 0.5000187)
bones/18/position = Vector3(3.0267981e-09, 0.0099614505, 8.53601e-08)
bones/18/rotation = Quaternion(-0.11967758, 1.6887427e-07, 1.0584159e-06, 0.9928128)
bones/19/position = Vector3(0.016396746, -0.0070355665, 0.114690766)
bones/19/rotation = Quaternion(-0.23647518, 0.6304559, 0.70877355, 0.21034507)
bones/20/position = Vector3(-0.016396794, -0.007035896, 0.11469075)
bones/20/rotation = Quaternion(0.23647512, 0.63045824, 0.7087709, -0.21034694)
bones/21/position = Vector3(-1.1641532e-08, -0.023958744, 0.110845074)
bones/22/rotation = Quaternion(0.7071059, 5.798986e-07, 1.7789199e-07, 0.70710766)
bones/24/rotation = Quaternion(0.5031425, -0.6313403, -0.084313504, 0.5840791)
bones/25/rotation = Quaternion(0.22914211, 0.016176017, 0.23687834, 0.943992)
bones/26/rotation = Quaternion(0.3001813, 0.0022424394, -0.016345786, 0.95373946)
bones/27/rotation = Quaternion(0.15795867, -0.012548142, 0.1543016, 0.9752347)
bones/28/rotation = Quaternion(0.19151272, 0.676801, -0.525038, 0.47916427)
bones/29/rotation = Quaternion(0.15762232, 0.008349038, 0.1254275, 0.97946596)
bones/30/rotation = Quaternion(0.27587673, 0.013903004, 0.1717299, 0.9456256)
bones/31/rotation = Quaternion(0.3123209, 0.003965305, 0.12513863, 0.9416901)
bones/35/rotation = Quaternion(0.5031271, 0.6313554, 0.08429166, 0.584079)
bones/36/rotation = Quaternion(0.22913261, -0.016184162, -0.23683576, 0.9440049)
bones/37/rotation = Quaternion(0.30017996, -0.0022492895, 0.01636749, 0.9537395)
bones/38/rotation = Quaternion(0.15796569, 0.012558721, -0.15437552, 0.9752217)
bones/39/rotation = Quaternion(-0.19150592, 0.6768032, -0.5250407, -0.47916117)
bones/40/rotation = Quaternion(0.15762709, -0.008353252, -0.12540586, 0.97946787)
bones/41/rotation = Quaternion(0.2758775, -0.013894102, -0.17176029, 0.9456199)
bones/42/rotation = Quaternion(0.31231716, -0.0039631473, -0.1251436, 0.94169074)
bones/45/position = Vector3(-2.235174e-08, -0.042604115, 0.08182442)
bones/49/rotation = Quaternion(0.27160507, -4.817385e-07, 1.5904228e-06, 0.9624088)
bones/50/position = Vector3(-1.5832482e-08, 0.01803165, 4.381235e-08)
bones/50/rotation = Quaternion(-0.3251814, -8.58152e-07, -2.452633e-06, 0.94565165)
bones/52/rotation = Quaternion(-0.10644285, 0.076964244, 0.98238456, 0.13291755)
bones/54/rotation = Quaternion(0.68487555, -0.09398206, -0.24950762, 0.67812896)
bones/57/rotation = Quaternion(0.6848755, 0.09398157, 0.24950802, 0.6781289)
bones/58/position = Vector3(1.0974107e-07, -0.02815676, 0.119018696)
bones/58/rotation = Quaternion(-0.5974415, -0.4010321, -0.46266618, 0.5178581)
bones/59/position = Vector3(-5.5029897e-08, 0.01313563, 2.0648528e-07)
bones/59/rotation = Quaternion(-0.11413875, -0.055098485, 0.20740765, 0.97000957)
bones/60/position = Vector3(6.679507e-08, -0.028157067, 0.11901869)
bones/60/rotation = Quaternion(-0.5974491, 0.40102667, 0.46267703, 0.5178437)
bones/61/position = Vector3(-4.1998533e-08, 0.013135939, -6.948467e-08)
bones/61/rotation = Quaternion(-0.114108756, 0.05509071, -0.20741989, 0.970011)
bones/62/position = Vector3(-1.8247441e-08, -0.037475873, 0.11822473)
bones/62/rotation = Quaternion(-0.5679973, -0.41854116, -0.41261944, 0.576149)
bones/63/rotation = Quaternion(0.025093317, 0.005509054, 0.13887474, 0.98997664)
bones/64/position = Vector3(1.2914417e-08, -0.03747578, 0.11822469)
bones/64/rotation = Quaternion(-0.5679987, 0.41854274, 0.41262895, 0.5761396)
bones/65/rotation = Quaternion(0.025112098, -0.00551112, -0.13889718, 0.989973)
bones/66/rotation = Quaternion(-0.17260392, 0.7925352, 0.52319545, 0.26146197)
bones/67/rotation = Quaternion(0.008722697, -0.038980223, -0.08905512, 0.9952255)
bones/68/rotation = Quaternion(-0.17955801, -0.052646846, -0.21892431, 0.95763224)
bones/69/rotation = Quaternion(-0.25033385, 0.046540923, -0.2193033, 0.94184554)
bones/70/rotation = Quaternion(0.7125854, -0.053314462, -0.6960616, 0.069841586)
bones/71/position = Vector3(-3.8959627e-09, 0.019570556, -2.6832334e-09)
bones/71/rotation = Quaternion(-0.058442824, -0.06073956, -0.08145889, 0.99310607)
bones/72/rotation = Quaternion(0.17260453, 0.7925378, 0.52319014, -0.26146445)
bones/73/rotation = Quaternion(0.008715268, 0.038979575, 0.08905227, 0.99522585)
bones/74/rotation = Quaternion(-0.17956072, 0.05264625, 0.21892415, 0.95763177)
bones/75/rotation = Quaternion(-0.2503238, -0.04653814, 0.21930537, 0.94184786)
bones/76/rotation = Quaternion(0.71258557, 0.053315226, 0.69606155, 0.069840945)
bones/76/scale = Vector3(1.0000098, 1.0000042, 1.0000058)
bones/77/position = Vector3(5.991998e-08, 0.019570315, 2.006629e-08)
bones/77/rotation = Quaternion(-0.058444142, 0.060739435, 0.081458546, 0.993106)
bones/81/rotation = Quaternion(0.69801635, -0.2243353, -0.63352406, -0.24717253)
bones/82/rotation = Quaternion(0.07547711, 0.8660082, 0.47473773, -0.13768463)
bones/83/rotation = Quaternion(0.19744375, 0.7595825, 0.55852205, -0.268521)
bones/85/rotation = Quaternion(0.6980162, 0.22433548, 0.63352406, -0.24717258)
bones/86/position = Vector3(0.024872452, -0.036299862, 0.10572027)
bones/86/rotation = Quaternion(0.21113111, 0.8044624, -0.43514866, 0.34483287)
bones/87/position = Vector3(-5.6921934e-09, 0.038928736, -1.0035883e-07)
bones/87/rotation = Quaternion(-0.3977669, -0.04995462, 0.054352637, 0.9145118)
bones/88/position = Vector3(-0.02487235, -0.036299966, 0.105720215)
bones/88/rotation = Quaternion(-0.21112897, 0.8044641, -0.43514648, -0.34483284)
bones/89/position = Vector3(7.42753e-08, 0.038929142, 5.0684434e-10)
bones/89/rotation = Quaternion(-0.39776337, 0.04995382, -0.054354172, 0.9145133)
bones/90/rotation = Quaternion(-0.35284016, 0.316535, 0.87113273, 0.12820752)
bones/91/position = Vector3(5.773577e-08, 0.0400504, 1.5201418e-07)
bones/91/rotation = Quaternion(0.5748087, 0.04423912, -0.17339727, 0.79848063)
bones/92/rotation = Quaternion(0.3528402, 0.31653658, 0.8711319, -0.12820938)
bones/93/position = Vector3(-6.3287864e-08, 0.04005049, -3.8888437e-08)
bones/93/rotation = Quaternion(0.5748013, -0.04423919, 0.17339484, 0.7984865)
bones/94/rotation = Quaternion(0.7446801, 0.13527964, 0.65335554, -0.016659873)
bones/95/rotation = Quaternion(0.84690434, 0.14071502, 0.51025414, -0.05092288)
bones/97/rotation = Quaternion(0.74468017, -0.1352794, -0.65335554, -0.016659932)
bones/98/rotation = Quaternion(0.84690416, -0.14071564, -0.5102543, -0.050922163)
bones/102/position = Vector3(4.2142347e-08, -0.01821498, 0.124772415)
bones/102/rotation = Quaternion(0.9998334, -1.7468969e-06, 3.048702e-08, 0.01825409)
bones/103/rotation = Quaternion(-0.121280536, -0.09532078, 0.9880058, -0.007034474)
bones/105/rotation = Quaternion(0.49999994, 0.49999994, 0.50000006, -0.50000006)
bones/106/position = Vector3(-0.0083051985, 0.17417364, -0.030619627)
bones/106/rotation = Quaternion(-0.48962805, -0.00031370114, -0.07392388, 0.8687921)
bones/107/rotation = Quaternion(0.08748873, 0.97487605, -0.17898037, 0.099641375)
bones/108/rotation = Quaternion(-0.00062072347, 0.18933865, 0.21690872, 0.957654)
bones/109/rotation = Quaternion(0.27279928, -0.6905305, 0.40541708, 0.5332778)
bones/110/rotation = Quaternion(-0.09700599, -0.1016621, -0.1443681, 0.9794961)
bones/111/rotation = Quaternion(-0.23477608, 0.5681163, -0.21067649, 0.7600918)
bones/113/rotation = Quaternion(0.25333887, -0.59062916, -0.31306988, 0.6992596)
bones/113/scale = Vector3(1.0006039, 1.0005964, 1.0000144)
bones/114/rotation = Quaternion(-0.020449169, 0.0030041195, 0.01404329, 0.99968773)
bones/115/rotation = Quaternion(0.55199504, -0.01394197, 0.5060918, 0.6625544)
bones/116/rotation = Quaternion(0.31369555, -0.1271281, -0.065577656, 0.93868697)
bones/116/scale = Vector3(1.000332, 0.99977344, 0.9998922)
bones/117/rotation = Quaternion(0.06671708, 0.0411174, 0.23943767, 0.9677437)
bones/118/scale = Vector3(1.0005853, 1.0005391, 1.0000937)
bones/120/rotation = Quaternion(-0.071075566, -0.017894799, -0.05506892, 0.9957889)
bones/121/rotation = Quaternion(-0.0030186193, 0.0010162262, 0.0035652022, 0.9999887)
bones/122/rotation = Quaternion(0.59027314, -0.03469785, 0.3852867, 0.7084687)
bones/124/rotation = Quaternion(-0.07409529, -0.052479845, -0.026212, 0.9955244)
bones/125/rotation = Quaternion(0.0041894945, -0.0025129516, -0.006813712, 0.99996495)
bones/126/rotation = Quaternion(0.6013385, -0.009367323, 0.2994946, 0.7406803)
bones/128/rotation = Quaternion(0.014235821, -0.09239781, 0.036038753, 0.99496794)
bones/129/rotation = Quaternion(0.00036718635, -0.00026177903, -0.0008149595, 0.99999964)
bones/130/rotation = Quaternion(0.6216161, -0.017370429, 0.23800936, 0.7460853)
bones/131/rotation = Quaternion(0.2755546, -0.82542837, -0.21671093, -0.44246355)
bones/132/position = Vector3(0.00830521, 0.17417456, -0.03062001)
bones/132/rotation = Quaternion(-0.062623106, 0.16859607, 0.1389255, 0.9738344)
bones/133/rotation = Quaternion(-0.013890181, 0.8037188, 0.594579, -0.017862042)
bones/134/rotation = Quaternion(0.0007334272, 0.22364461, 0.2562101, 0.940393)
bones/135/rotation = Quaternion(-0.3416852, 0.73090976, 0.2514733, 0.53458726)
bones/136/rotation = Quaternion(0.026318233, -0.027581478, -0.03916798, 0.99850523)
bones/137/rotation = Quaternion(-0.1083142, -0.8846599, 0.12748885, 0.4351914)
bones/139/rotation = Quaternion(0.20232086, 0.6798524, 0.07851458, 0.7005015)
bones/139/scale = Vector3(1.0006052, 1.0005953, 1.0000148)
bones/140/rotation = Quaternion(0.3934824, -0.20241427, -0.21144514, 0.8714879)
bones/141/rotation = Quaternion(0.79365176, -0.21872383, -0.4565981, 0.3373352)
bones/142/rotation = Quaternion(0.06199967, -0.09361533, 0.033351656, 0.9931163)
bones/142/scale = Vector3(1.0003343, 0.99976957, 0.99989045)
bones/143/rotation = Quaternion(0.010333939, -0.0063690683, -0.037087616, 0.9992383)
bones/144/rotation = Quaternion(-0.3149122, 0.25724962, -0.50492656, 0.7613818)
bones/144/scale = Vector3(1.0005862, 1.0005411, 1.0000899)
bones/146/position = Vector3(-0.018728558, 0.010250565, 0.067344815)
bones/146/rotation = Quaternion(0.24145803, 0.4445959, -0.74017084, 0.44292188)
bones/148/rotation = Quaternion(0.23831442, -0.17304648, -0.1524228, 0.94341326)
bones/149/rotation = Quaternion(0.36955363, -0.17057723, -0.20923156, 0.88913196)
bones/150/rotation = Quaternion(0.8486736, -0.14508781, -0.35860452, 0.36070138)
bones/152/rotation = Quaternion(0.23275937, -0.0848558, -0.11184788, 0.9623475)
bones/153/rotation = Quaternion(0.37914863, -0.18119818, -0.17444462, 0.8904958)
bones/154/rotation = Quaternion(0.8732277, -0.12844354, -0.27071443, 0.38430372)
bones/156/rotation = Quaternion(0.11078635, -0.01038681, -0.046597406, 0.992697)
bones/157/rotation = Quaternion(0.29682705, -0.16607817, -0.14773686, 0.9287011)
bones/158/rotation = Quaternion(0.8519741, -0.07115207, -0.22778831, 0.4660364)
bones/159/rotation = Quaternion(0.99044853, 0.058037795, -0.00059137953, 0.12507181)
bones/160/rotation = Quaternion(0.003228954, 5.7172387e-05, -0.016145444, 0.9998645)
bones/161/rotation = Quaternion(0.9994368, -0.025034552, 0.0028800839, 0.02216343)
bones/162/rotation = Quaternion(-0.0063084, -0.00020185218, -0.031579293, 0.9994813)
bones/165/rotation = Quaternion(-0.0097981645, 0.15686896, 0.9858577, -0.058145024)
bones/166/position = Vector3(-0.021174232, 0.24025263, 0.016643127)
bones/166/rotation = Quaternion(0.0068588336, -0.077823065, -0.0053910357, 0.99692905)
bones/167/rotation = Quaternion(0.019829687, 0.97755414, -0.18599626, 0.09695381)
bones/168/position = Vector3(0.025245799, 0.2259776, 0.0085122315)
bones/168/rotation = Quaternion(6.829916e-05, 0.00061210786, 2.3076773e-05, 0.9999999)
bones/169/rotation = Quaternion(0.15205136, 0.8132973, -0.56097484, -0.02711501)
bones/170/rotation = Quaternion(0.25021535, 0.9066889, 0.3272921, 0.090484485)
bones/171/rotation = Quaternion(0.010548771, 0.028579514, 0.99279296, -0.115905605)
bones/172/position = Vector3(0.022259044, 0.25256154, 0.017495604)
bones/172/rotation = Quaternion(-0.016405787, -0.18614595, -0.012894945, 0.9823006)
bones/173/rotation = Quaternion(0.0029125197, 0.98085153, 0.034462336, 0.19166166)
bones/174/position = Vector3(-0.026622575, 0.23830104, 0.00897648)
bones/174/rotation = Quaternion(-0.011965547, 0.10710487, 0.0040344615, 0.99416757)
bones/175/rotation = Quaternion(-0.045742787, 0.6839734, -0.7214232, -0.09816666)
bones/176/rotation = Quaternion(0.23409909, 0.97025895, 0.059959322, 0.014150845)

[node name="racket" parent="h/player/game-rig/GeneralSkeleton" index="0"]
transform = Transform3D(-0.0879947, 0.8563334, 0.5088712, -0.9947845, -0.04909739, -0.08939853, -0.05157058, -0.5140841, 0.8561877, -0.27513248, 2.4697835, 0.6902399)

[node name="RacketForehand" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.89747, 1.21593, -0.27383915)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RacketForehand"]
shape = SubResource("50")

[node name="RacketBackhand" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.676815, 1.21593, -0.0874602)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RacketBackhand"]
shape = SubResource("50")

[node name="Points" type="Node3D" parent="."]

[node name="BallServePoint" type="Marker3D" parent="Points"]
transform = Transform3D(1.0000005, 0, 0, 0, 0.9999976, 0, 0, 0, 1, 0.16375381, 2.6329153, -0.7290658)

[node name="BallTossPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.151763, 1.93189, -0.490733)

[node name="BackhandSliceDownPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.666439, 0.491877, -0.490733)

[node name="BackhandSliceUpPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.03961, 1.62896, -0.490733)

[node name="BackhandDownPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.666439, 0.68066, -0.490733)

[node name="BackhandUpPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.657659, 1.54555, -0.490733)

[node name="ForehandDownPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1703565, 0.5880548, -0.60338837)

[node name="ForehandPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3610765, 1.3818057, -0.6214852)

[node name="ForehandUpPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3476162, 1.7261463, -0.59341383)

[node name="AnimationTreeRootMotion" type="AnimationTree" parent="."]
root_motion_track = NodePath("game-rig/Skeleton3D:root")
tree_root = SubResource("AnimationNodeStateMachine_os7wk")
parameters/conditions/idle = false
parameters/conditions/moving = false
parameters/move/blend_position = Vector2(-0.19970602, -0.08251464)
parameters/stroke/Transition/current_state = "forehand"
parameters/stroke/Transition/transition_request = ""
parameters/stroke/Transition/current_index = 0

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
root_node = NodePath("../h/player")
tree_root = SubResource("AnimationNodeStateMachine_dxleo")
anim_player = NodePath("../h/player/AnimationPlayer")
parameters/move/blend_position = Vector2(-0.0036463737, -0.017201543)
parameters/stroke/forehand/blend_position = 0.49956018
parameters/stroke/Transition/current_state = "forehand"
parameters/stroke/Transition/transition_request = ""
parameters/stroke/Transition/current_index = 0

[node name="RootMotionView" type="RootMotionView" parent="."]
animation_path = NodePath("../AnimationTreeRootMotion")

[editable path="h/player"]
